--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -78,7 +78,8 @@ jobs:
     - name: Terraform Init
       run: terraform init
         env:
-        GOOGLE_CREDENTIALS: ${{ secrets.GOOGLESECRET}}
+        GOOGLE_CREDENTIALS: ${{ secrets.GOOGLESECRET
+}}
 
     # Checks that all Terraform configuration files adhere to a canonical format
     - name: Terraform Format
@@ -88,7 +89,8 @@ jobs:
     - name: Terraform Plan
       run: terraform plan -input=false
         env:
-        GOOGLE_CREDENTIALS: ${{ secrets.GOOGLESECRET}}
+        GOOGLE_CREDENTIALS: ${{ secrets.GOOGLESECRET
+}}
 
       # On push to "main", build or change infrastructure according to Terraform configuration files
       # Note: It is recommended to set up a required "strict" status check in your repository for "Terraform Cloud". See the documentation on "strict" required status checks for more information: https://help.github.com/en/github/administering-a-repository/types-of-required-status-checks
@@ -96,4 +98,5 @@ jobs:
       if: github.ref == 'refs/heads/"main"' && github.event_name == 'push'
       run: terraform apply -auto-approve -input=false
         env:
-        GOOGLE_CREDENTIALS: ${{ secrets.GOOGLESECRET}}
+        GOOGLE_CREDENTIALS: ${{ secrets.GOOGLESECRET
+}}
